Fixed overflowing background on title like button

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,15 +101,21 @@ hr {
 	margin-top: -11px !important;
 	width: 75px !important;
 	vertical-align: middle !important;
+	overflow; hidden;
+	padding-bottom: 0px;
 
 }
 
 .likeBtn i {
 	margin-top: 11%;
+
 }
+
 
 .likeBtn:hover {
 	background: #4687da;
+	height: 42px;
+
 }
 
 .sortBtns {
